--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
+<!DOCTYPE html>
 <html>
   <head>
-    Blinis Sakhli
-  
+    <title>Blinis Sakhli</title>
+    <style>
+      .box {
+        width: 100%;
+        height: 2000px;
+        border: 5px dashed #f7a239;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
+  <body>
+    <div class="box">
+      <img src="restaurant-menu.jpg" alt="Menu"/>
+    </div>
+  </body>
 </html>
