--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="box">
-      <img src="/restaurant-menu.jpg" alt="Menu"/>
+      <img src="https://github.com/blinisSakhli/blinisSakhli.github.io/blob/main/restaurant-menu.jpg" alt="Menu"/>
     </div>
   </body>
 </html>
