--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <a href="#reservation">Reservation</a>
       </li> -->
       <li class="nav-item">
-        <a href="file:///C:/Users/2021/Documents/blinisSakhli/menu.html">Menu</a>
+        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/edit/main/menu.html">Menu</a>
       </li>
       <li class="nav-item">
-        <a href="file:///C:/Users/2021/Documents/blinisSakhli/menu_ge.html">მენიუ</a>
+        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/edit/main/menu_ge.html">მენიუ</a>
       </li>
     </ul>
   </nav>
