--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <nav>
     <ul class="nav-flex-row">
       <li class="nav-item">
-        <a href="file:///C:/Users/2021/Documents/blinisSakhli/index.html">About</a>
+        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/index.html">About</a>
       </li>
       <!-- <li class="nav-item">
         <a href="#reservation">Reservation</a>
       </li> -->
       <li class="nav-item">
-        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/edit/main/menu.html">Menu</a>
+        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/menu.html">Menu</a>
       </li>
       <li class="nav-item">
-        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/edit/main/menu_ge.html">მენიუ</a>
+        <a href="https://github.com/blinisSakhli/blinisSakhli.github.io/menu_ge.html">მენიუ</a>
       </li>
     </ul>
   </nav>
