--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <li class="nav-item">
         <a href="#scroll">Menu</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a href="#scroll">მენიუ</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
@@ -60,7 +60,10 @@
       </h3>
       <br>
       <p>
-        Family cafe serving crepes with salty and sweet fillings, as well as a large selection of coffee and natural teas.
+        Here, at Pancake House, We cook simple and nutritious foods with organic ingredients just like we make it for our families and kids. 
+      </p>
+      <p>
+        Every day, we pay tribute to our family recipes, boiling homemade chocolate and creamy caramels, preparing ough and making all-natural fillings, the old-fashioned way.
       </p>
       <p>
 
@@ -72,10 +75,22 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="crepe.jpg" class="d-block w-100" alt="food">
+          <img src="0004.jpg" class="d-block w-100" alt="food">
         </div>
         <div class="carousel-item">
-          <img src="cropped-crepes.jpg" class="d-block w-100" alt="food">
+          <img src="0005.jpg" class="d-block w-100" alt="food">
+        </div>
+        <div class="carousel-item">
+          <img src="0006.jpg" class="d-block w-100" alt="food">
+        </div>
+        <div class="carousel-item">
+          <img src="0007.jpg" class="d-block w-100" alt="food">
+        </div>
+        <div class="carousel-item">
+          <img src="0008.jpg" class="d-block w-100" alt="food">
+        </div>
+        <div class="carousel-item">
+          <img src="0009.jpg" class="d-block w-100" alt="food">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
